--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -15,6 +15,16 @@ jobs:
     steps:
     - name: Hola Mundo
       run: echo "Hola Mundo"
+    
+    - name: touch file
+      run: touch hola.txt
+    
+    - name: Set text
+      run: echo "Hola Mundo" >> hola.txt
+    
+    - name: Read file 
+      run: cat hola.txt
+
 
 # Dentro de un workflow puedes tener múltiples jobs. Y cada uno se ejecuta en un servidor, entonces es necesario declarar runs-on en cada job
   other:
