--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -43,7 +43,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [hola]
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4.1.7
+      
     - name: LS
       run: ls -al
 
 
+# Bloque de código reutilizable que realiza una tarea específica en un step
+# Agrupar steps dentro de un action y reutilizarlo en diferentes workflows
