Reading node action doc to choose a node version

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -51,12 +51,17 @@ jobs:
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v4.0.4
+# Steps cuando trabajamos con actions, disponemos de la directiva with, permite pasar parametros para el action
+      with:
+        node-version: latest
     
     - name: node version
       run: node --version
   
 # Actions. Bloque de código reutilizable que realiza una tarea específica en un step
 # Agrupar steps dentro de un action y reutilizarlo en diferentes workflows
+    - name: Install dependencies
+      run: echo "npm install, but remember you can use the marketplace to do this"
 
 
 
