--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,6 @@ jobs:
               chmod +x script.sh
               ./script.sh
 
+# Utilizar acción local
+          - name: ls action
+            uses: ./.github/actions/my-action
