--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -1,11 +1,18 @@
 name: "My action"
 description: "Test my action"
 
+# Pasar parámetros
+inputs:
+  message:
+    description: "The message to print"
+    required: true
+    default: "Hola"
+
 # Composite. Permiten agrupar pasos comunes
 runs:
   using: "composite"
 
   steps:
     - name: Hola Mundo
-      run: echo "Hola Mundo"
+      run: echo "${{ inputs.message }} Mundo"
       shell: bash
