--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -63,5 +63,24 @@ jobs:
     - name: Install dependencies
       run: echo "npm install, but remember you can use the marketplace to do this"
 
+# SERVICIOS
+# Como mySQL, por ejemplo
+# Actions provee forma de utilizar ese tipo de servicios usando contenedores 
 
+# Dockerhub, imagen de mySQL
+# Definir la directiva services
+  say-hello: 
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: example
+        ports:
+          - 3306:3306
+    
+    steps:
+      - name: Test
+        run: ls
 
